fix: Remove a black background that covered the swoosh

--- a/themes/alpha/static/components/main_nav.css
+++ b/themes/alpha/static/components/main_nav.css
@@ -7,7 +7,6 @@
     height: 6rem;
     position: relative;
     z-index: 2;
-    background-color: var(--clr-alpha-black);
   }
 
   ul {
